--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <script src="https://cdn.paddle.com/paddle/paddle.js"></script>
   <title>Fleetly</title>
 </head>
 
@@ -41,6 +42,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script type="text/javascript">
+    Paddle.Environment.set('sandbox');
+    Paddle.Setup({ vendor: 1511 });
+  </script>
 </body>
 
 </html>
