--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     Paddle.Environment.set('sandbox');
     Paddle.Setup({ vendor: 1511 });
-  </script>
+  </script> -->
 </body>
 
 </html>
