Changed site title.

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://cdn.paddle.com/paddle/paddle.js"></script>
-    <title>Fleetly</title>
+    <title>New level of chatbots marketing with Fleetly</title>
   </head>
 
   <body>
